--- a/Science.mediawiki
+++ b/Science.mediawiki
@@ -17,6 +17,7 @@ Bioinformatics, Biotech, Genetics, ....
 * GeneticAlgorithms.jl:: is a [https://github.com/forio/GeneticAlgorithms.jl lightweight framework that simplifies the process of creating genetic algorithms] and running them in parallel.
 * FastaIO.jl:: [https://github.com/carlobaldassi/FastaIO.jl Utilities to read/write FASTA format files] in Julia.
 * Phylogenetics.jl:: The Julia package for [https://github.com/Ward9250/Phylogenetics.jl  analysis of evolution and phylogeny].
+* SpikeSorter.jl:: [https://github.com/grero/SpikeSorter.jl Spike sorting tool for experimental neuroscientists].
 
 
 = PHYSICS =
