--- a/QA.mediawiki
+++ b/QA.mediawiki
@@ -7,6 +7,8 @@ Benchmarks/ Optimization, Quality-Analysis(QA), Test-Driven-Development (TDD), B
 * [https://github.com/JuliaLang/julia/blob/master/test/perf/kernel/raytracer.jl Raytracer in the Julia kernel]
 * More [https://github.com/jakebolewski/rays Raytracers].
 * Criterion.jl:: [https://github.com/jakebolewski/Criterion.jl A port of the Haskell's Criterion and Clojure's Criterium library] to Julia, that runs benchmarks, analyzing the results using various statistical techniques.
+* SortPerf.jl:: [https://github.com/kmsquire/SortPerf.jl  Julia module to test the performance of sorting algorithms].
+
 
 === Logging ===
 * Lumberjack.jl:: A [https://github.com/forio/Lumberjack.jl logging library] for Julia, by Westley Hennigh.
