--- a/Graphics-Visualization.mediawiki
+++ b/Graphics-Visualization.mediawiki
@@ -15,8 +15,8 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 * Gaston
 * [https://github.com/johnmyleswhite/ASCIIPlots.jl ASCIIPlots.jl]
 * [https://github.com/dcjones/Gadfly.jl Gadfly.jl]
-  * Rendering to an [https://github.com/dcjones/Gadfly.jl#using-the-d3-backend SVG file using the D3 browser interface]
-* [https://github.com/stevengj/PyPlot.jl PyPlot.jl: Plotting for Julia based on matplotlib.pyplot]
+  ** Rendering to an [https://github.com/dcjones/Gadfly.jl#using-the-d3-backend SVG file using the D3 browser interface]
+* [https://github.com/stevengj/PyPlot.jl PyPlot.jl: Plotting for Julia based on matplotlib, pyplot]
 * Winston.jl:: [https://github.com/nolta/Winston.jl 2D plotting] for Julia.
 
 
@@ -27,13 +27,13 @@ Graphics, Plots and other Visualization libraries and packages. Also includes bl
 == Visualization ==
 * Cairo.jl: [https://github.com/JuliaLang/Cairo.jl Bindings for the Cairo graphics library]
 * [https://github.com/JuliaLang/Color.jl Color.jl]: adds colour to your plots and graphs.
+* ECharts.jl:: [https://github.com/wlbksy/ECharts.jl  A julia package for ECharts (https://github.com/ecomfe/echarts)].
+* GL.jl:: [https://github.com/jayschwa/GL.jl Experimental OpenGL bindings] for Julia.
 * Jeff Bezanson's [http://nbviewer.ipython.org/url/beowulf.csail.mit.edu/18.337/black%20body%20radiation.ipynb Colorimetry in an iJulia notebook]
 * Interactive [https://github.com/GlenHertz/ProfileView.jl SVG flame graphs] for analyzing profiling to ProfileView. An HTML preview of the [http://htmlpreview.github.io/?https://raw.github.com/GlenHertz/ProfileView.jl/master/readme_images/profile.svg SVG example]
 * The interactive [http://johnmyleswhite.com/typetree/tree.html D3 visualization] of a Julia type tree and the [https://github.com/johnmyleswhite/TypeTree.jl source code for TypeTree].
 * [https://github.com/natj/matplot A MATLAB-like interface to Winston].
 * VTK.jl:: [https://github.com/ihnorton/VTK.jl VTK bindings] for the Julia language.
-* ECharts.jl:: [https://github.com/wlbksy/ECharts.jl  A julia package for ECharts (https://github.com/ecomfe/echarts)].
-* GL.jl:: [https://github.com/jayschwa/GL.jl Experimental OpenGL bindings] for Julia.
 
 ==== HowTo's Blogs ====
 Read other Julia users experiences with plotting
