--- a/JULYA.mediawiki
+++ b/JULYA.mediawiki
@@ -5,6 +5,9 @@
 
 
 = DOCUMENTATION =
+
+* Roxygen.jl:: [https://github.com/johnmyleswhite/Roxygen.jl A Roxygen-like documentation package] for automatically generating documentation from Julia source files.
+
 == Start with Julia ==
 * [http://julialang.org/downloads/ Download and install Julia on various Operating Systems]
 * List of [http://docs.julialang.org/en/latest/manual/modules/ Julia Modules]
