--- a/Networking-Web-Server.mediawiki
+++ b/Networking-Web-Server.mediawiki
@@ -32,6 +32,7 @@ Networking, Events frameworks and other Web related things go here:
 
 
 == Networking ==
+* SMTPClient.jl:: An [https://github.com/aviks/SMTPClient.jl SMTP client to send emails] from Julia.
 * [https://github.com/loladiro/GnuTLS.jl Transport Level Security for Julia Streams provided by GnuTLS].
 * [https://github.com/kmsquire/Logging.jl Logging] module.
 * [https://github.com/pchronz/juliaflow JuliaFlow] is a controller for software-defined networking (SDN) that implements the OpenFlow Controller Specification 1.0.0. 
