--- a/Actuarial-Science.mediawiki
+++ b/Actuarial-Science.mediawiki
@@ -27,6 +27,7 @@ Statistics, Finance, Numerical analysis, ....
 * RDatasets.jl:: Julia package for [https://github.com/johnmyleswhite/RDatasets.jl loading many of the data sets] available in R.
 * TimeSeries.jl:: [https://github.com/JuliaStats/TimeSeries.jl Time-series toolkit] for Julia.
 * TimeModels.jl:: [https://github.com/JuliaStats/TimeModels.jl Modeling time series] in Julia.
+* TimeData.jl:: [https://github.com/cgroll/TimeData.jl package provides fast, robust and convenient representation of time series data].
 * Civecm.jl:: [https://github.com/andreasnoackjensen/Civecm.jl  Cointegration in Vector Error Correction Models] in Julia.
 
 
