--- a/Utilities.mediawiki
+++ b/Utilities.mediawiki
@@ -18,7 +18,8 @@
 
 
 = GUI widget toolkits =
-== GUI ==
+
+* XClipboard.jl:: are [https://github.com/kmsquire/XClipboard.jl xlib clipboard bindings to drag and drop in X11] (X-Window System for bitmap displays). 
 * The Julia interface for the [https://github.com/JuliaLang/Tk.jl Tk windowing toolkit].
 * Julia interface to the [https://github.com/JuliaLang/Gtk.jl GTK windowing toolkit].
 
