--- a/Mathematics.mediawiki
+++ b/Mathematics.mediawiki
@@ -46,7 +46,7 @@
 * SuperLU.jl:: Julia interface to the [https://github.com/dmbates/SuperLU.jl SuperLU solver package for sparse systems].
 * Sobol.jl :: is a [https://github.com/stevengj/Sobol.jl  generation of Sobol low-discrepancy sequence (LDS)] implementation, that generates "quasi-random" sequences of points in N dimensions which are equally distributed over an N-dimensional hypercube.
 * SurfaceMesh.jl:: is a [https://github.com/michelk/SurfaceMesh.jl Finite element surface mesh manipulation library] to work with polygon-surface-meshes.
-
+* Tensors.jl:: [https://github.com/pgawron/Tensors.jl Julia package for tensor decompositions].
 
 == Cryptography ==
 * Nettle is a [https://github.com/staticfloat/Nettle.jl  simple wrapper around libnettle, a cryptographic library].
