--- a/API.mediawiki
+++ b/API.mediawiki
@@ -9,9 +9,11 @@
 
 
 = Language API =
+== Fortran ==
+* FortranIO.jl:: [https://github.com/rephorm/FortranIO.jl  Input/Output of fortran unformatted binary files].
+
 == Java ==
 * [http://aviks.github.io/JavaCall.jl/ JavaCall.jl] is a package that lets you call Java programs from Julia. 
-
 
 == Python ==
 * [https://github.com/stevengj/PyCall.jl PyCall.jl] lets you call Python functions from the Julia language.
